# Grafos-TP2-Algo-3-

./: CMakeLists.txt  README.md  ej2.cpp  entry_point.sh  intervalosRandom.cpp  randomDigrafoPesado.cpp  randomGrafo.cpp
instancias/: Data.docx  ej2testmaker.cpp
instancias/1/: basic1.txt  basic2.txt  basic3.txt  box.txt  dbox.txt  heavy10kTree1.txt  heavy10kTree2.txt  heavy10kTree3.txt  heavy10kTree4.txt  long.txt  rbox1.txt  rbox2.txt  tp_2.txt  tree-5000_a.in  tree-5000_b.in
instancias/2/: EC_oneCol.txt  EC_oneRow.txt  RESULTADOS.txt  basic_1.txt  basic_2.txt  basic_3.txt  basic_4.txt  basic_5.txt  boxes.txt  bridgeLong.txt  chess32x32.txt  heavyTest_TM1.txt  heavyTest_TM2.txt  heavyTest_TM3.txt  herradura.txt  testFallido.txt  testFallido_v2.txt
instancias/3/: GrandBlue.txt  HT_Newman.txt  HT_USairport500.txt  HT_openflights.txt  caminito.txt  ciclocero.txt  cicloneg1.txt  ciclonegcamino.txt  test_case1.txt  test_case1negdc.txt  test_case2.txt  test_case2negdc.txt
instancias/4/: big_1000.in  big_10000.in  caso_cadena.txt  caso_simple_mayor.txt  crear_test.sh  instancia_contenidos.txt  instancia_unico_contenedor.txt  testEntries.txt
tests/: ej4-gen.py  pearson_coef.py  test_solucion.py
tests/pearson/: correrEj4.sh  tiempos.out
